@@ -19,6 +19,7 @@ $Id$
 	Log "LOGIN" or "LOGOUT" for AIM buddy messages message
 	zwrite -m now logs and displays an outgoing message
 	zwrite -s now works
+	Don't allow sending to AIM users with spaces
 
 2.0.4-pre-1
 	Make command line option -n actualy work
